# integration_ros_hc10_kinect

hc10_kinect_bringup/: CMakeLists.txt  package.xml
hc10_kinect_bringup/config/: moveit.rviz
hc10_kinect_capteur/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hc10_kinect_capteur/config/: sensors.yaml
hc10_kinect_capteur/launch/: kinect_octomap.launch
hc10_kinect_capteur/scripts/: data_manager.py  second_iteration.py
hc10_kinect_description/: CMakeLists.txt  package.xml
hc10_kinect_description/launch/: load_hc10.launch  test_hc10.launch
hc10_kinect_description/urdf/: camera.xacro  common_materials.xacro  gazebo_control.xacro  hc10.xacro  hc10_macro.xacro
hc10_kinect_gazebo/: CMakeLists.txt  package.xml
hc10_kinect_ikfast_plugin/: CMakeLists.txt  hc10_kinect_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
hc10_kinect_ikfast_plugin/src/: hc10_kinect_ikfast_moveit_plugin.cpp  hc10_kinect_ikfast_solver.cpp
hc10_kinect_moveit_config/: .setup_assistant  CMakeLists.txt  listener.py  package.xml  test.py
hc10_kinect_moveit_config/config/: fake_controllers.yaml  gazebo_motoman_hc10.urdf  kinematics.yaml  motoman_hc10.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
hc10_kinect_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  (+9 more)
hc10_kinect_object_scanning/: CMakeLists.txt  Ellipse.py  package.xml
(+20 files in other folders)
