<?xml version="1.0"?>
<package format="2">
  <name>hc10_kinect_description</name>
  <version>0.0.0</version>
  <description>The hc10_kinect_description package</description>

  <maintainer email="axelniato@gmail.com">Axel NIATO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
